--- a/templates/dashboards/sales/ready_to_go.html
+++ b/templates/dashboards/sales/ready_to_go.html
@@ -1196,6 +1196,15 @@
                         <span style="font-size:0.9em;color:#666;" id="invoice_date_1">${invoiceObj.date}</span>
 
                             <div class="invoice-actions">
+
+                                <button class="glass-btn" title="Edit Bill" onclick="
+                                    event.stopPropagation();
+                                    window.open('${window.location.origin}/sales/edit-invoice/${invoiceObj.number}', '_blank');
+                                ">
+                                    <i class="bi bi-pencil-square" style="font-size:1.1em;"></i>
+                                </button>
+
+
                                 <button class="glass-btn" title="Download PDF" onclick="
                                     event.stopPropagation();
                                     window.open('${window.location.origin}/sales/download_invoice_pdf/${invoiceObj.number}', '_blank');
