--- a/templates/dashboards/sales/cancel_orders.html
+++ b/templates/dashboards/sales/cancel_orders.html
@@ -279,6 +279,11 @@
                 width: 260px !important;
             }
 
+             .profile-menu {
+                display: none;
+            }
+
+
             .sidebar.show {
                 left: 0;
             }
@@ -1238,6 +1243,11 @@
                             <i class="bi bi-x-circle me-2"></i>Canceled
                         </a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link " href="/logout">
+                            <i class="bi bi-box-arrow-right me-2"></i>Log out
+                        </a>
+                    </li>
                 </ul>
             </div>
 
@@ -1250,17 +1260,13 @@
                         </button>
                         <h4 class="mb-0">Canceled Orders</h4>
                     </div>
-                    <div class="dropdown profile-menu" style="border: 1px solid rgb(90, 90, 90); border-radius: 10px;">
-                        <button class="btn dropdown-toggle d-flex align-items-center" type="button"
-                            id="dropdownMenuButton" data-bs-toggle="dropdown">
-                            <span class="d-none d-md-inline"><i class="bi bi-person me-2"></i>
-                                {{ session.get('username', 'Sales Manager') }}
+                    <div class="dropdown profile-menu">
+                        <button class="btn d-flex align-items-center" type="button" id="dropdownMenuButton"
+                            style="border: 1px solid rgb(207, 207, 207);">
+                            <i class="fas fa-user me-2"></i>
+                            <span class="d-none d-md-inline">{{ session.get('username', 'Sales Manager') }}
                             </span>
                         </button>
-                        <ul class="dropdown-menu dropdown-menu-end">
-                            <li><a class="dropdown-item" href="/logout"><i
-                                        class="bi bi-box-arrow-right me-2"></i>Logout</a></li>
-                        </ul>
                     </div>
                 </div>
 
