--- a/templates/dashboards/sales/main.html
+++ b/templates/dashboards/sales/main.html
@@ -7,6 +7,9 @@
     <title>Sales Dashboard</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
+     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
+        xintegrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <style>
         :root {
             --primary: #1e2857;
@@ -90,6 +93,10 @@
                 left: 0;
             }
 
+             .profile-menu {
+                display: none;
+            }
+
             .main-content {
                 width: 100% !important;
                 margin-left: 0 !important;
@@ -171,6 +178,11 @@
                             <i class="bi bi-x-circle me-2"></i>Canceled
                         </a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link " href="/logout">
+                            <i class="bi bi-box-arrow-right me-2"></i>Log out
+                        </a>
+                    </li>
                 </ul>
             </div>
 
@@ -183,17 +195,13 @@
                         </button>
                         <h4 class="mb-0">Sales Overview</h4>
                     </div>
-                    <div class="dropdown profile-menu" style="border: 1px solid rgb(90, 90, 90); border-radius: 10px;">
-                        <button class="btn dropdown-toggle d-flex align-items-center" type="button"
-                            id="dropdownMenuButton" data-bs-toggle="dropdown">
-                            <span class="d-none d-md-inline"><i class="bi bi-person"></i>
-                                {{ session.get('username', 'Sales Manager') }}
+                    <div class="dropdown profile-menu">
+                        <button class="btn d-flex align-items-center" type="button" id="dropdownMenuButton"
+                            style="border: 1px solid rgb(207, 207, 207);">
+                            <i class="fas fa-user me-2"></i>
+                            <span class="d-none d-md-inline">{{ session.get('username', 'Sales Manager') }}
                             </span>
                         </button>
-                        <ul class="dropdown-menu dropdown-menu-end">
-                            <li><a class="dropdown-item" href="/logout"><i
-                                        class="bi bi-box-arrow-right me-2"></i>Logout</a></li>
-                        </ul>
                     </div>
                 </div>
 
